Подготовил файл для домашней работы

--- a/index.html
+++ b/index.html
@@ -2,82 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Homework</title>
 </head>
 <body>
-<script>
-    a = ['молоко', 'пиво', 'пиво', 'молоко', 'молоко'];
-    for (i of a) {
 
-        if (i === 'молоко') {
-
-            console.log('хорошо');
-
-        } else {
-            console.log('плохо');
-        }
-
-    }
-</script>
-<script>
-    {
-        a = [1, 5, 12, 4, 3];
-        b = [2, 3, 4, 5, 6, 7, 8, 9, 10];
-        c = [3, 10, 17];
-
-        function getAverage(numbers) {
-            let sum = 0;
-            for (let i = 0; i < numbers.length; i += 1) {
-                sum += numbers[i];
-            }
-            console.log(sum / numbers.length);
-        }
-
-        getAverage(a);
-        getAverage(b);
-        getAverage(c);
-    }
-</script>
-<script>
-    let myFunc = function () {
-
-        let some_text = prompt("У квадратного стола отпилили один угол. Сколько теперь углов у него стало?");
-
-
-        if (some_text === '5' || some_text === 'пять') {
-
-            let some_text = alert("Ответ верный");
-
-
-        } else {
-
-            let some_text = alert("Ответ неверный");
-
-        }
-
-    };
-    myFunc()
-
-</script>
-<script>
-    let duck = {
-
-        name: 'Дональд',
-
-        color: 'Белый',
-
-        age: 1,
-
-        toStr: function () {
-            console.log(`${this.name}, ${this.color}, ${this.age} год`);
-        },
-        say: function () {
-            console.log('кря кря');
-        }
-
-    };
-    duck.toStr()
-    duck.say()
-</script>
 </body>
 </html>
